Fix unreadable <pre><code>...</></> when prefers-color-scheme: light
In unfenced preformatted blocks

    like this one

the text color was almost the same as the background color.

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -270,7 +270,7 @@ pre {
     }
   
     @media (prefers-color-scheme: light) {
-      color: #ccc;
+      color: #111;
     }
   
     [data-theme=dark] & {
@@ -278,7 +278,7 @@ pre {
     }
   
     [data-theme=light] & {
-      color: #ccc;
+      color: inherit;
     }
   }
 }
